erDiagram
    User {
        int id PK
        string name
        string email UK
        datetime emailVerified
        string image
        string password
        enum role
        datetime createdAt
        datetime updatedAt
        boolean isActive
        string resetToken
        datetime resetTokenExpires
    }
    
    Emotion {
        int id PK
        int userId FK
        int emotionId FK
        datetime date
        string comment
    }
    
    EmotionType {
        int id PK
        string name UK
        int level
        int parentId FK
        string color
        string bgColor
    }
    
    Activity {
        int id PK
        string title UK
        string description
        enum category
        string duration
        string level
        string location
        string equipment
        boolean isActive
        datetime createdAt
        datetime updatedAt
    }
    
    Favorite {
        int id PK
        int userId FK
        int activityId FK
        datetime createdAt
    }
    
    StressQuestion {
        int id PK
        string event UK
        int points
    }
    
    StressResult {
        int id PK
        int userId FK
        int totalScore
        datetime createdAt
    }
    
    PageContent {
        int id PK
        string page UK
        string title
        string content
        datetime updatedAt
    }
    
    User ||--o{ Favorite : "possède"
    User ||--o{ StressResult : "obtient"
    User ||--o{ Emotion : "enregistre"
    
    Activity ||--o{ Favorite : "est dans"
    
    EmotionType ||--o{ Emotion : "est de type"
    EmotionType ||--o{ EmotionType : "parent de"